fix upvote z-index

--- a/components/answer/answer.module.css
+++ b/components/answer/answer.module.css
@@ -63,7 +63,6 @@
 }
 
 .root.allowActions .action {
-  z-index: 3;
   cursor: pointer;
 }
 
