--- a/components/question/question.module.css
+++ b/components/question/question.module.css
@@ -102,7 +102,6 @@
 }
 
 .root.allowActions .action {
-  z-index: 3;
   cursor: pointer;
 }
 
